# deprecated-ln-shell

./: Makefile  README.md  ln-shell.cabal  misc.txt  stack.yaml  todo.txt
app/: main.hs
src/: Shell.hs
src/Shell/: Api.hs  Editor.hs  Leuron.hs  Main.hs  Types.hs
src/Shell/Api/: Bucket.hs  Leuron.hs  Organization.hs  RBrowse.hs  Reminder.hs  Resource.hs  Team.hs  Test.hs
src/Shell/Leuron/: Display.hs
